[gd_scene load_steps=48 format=3 uid="uid://dvv0jrfktcyl4"]

[ext_resource type="Texture2D" uid="uid://dvdnxdynx3lqj" path="res://Assets/bedroom_wall_1_concept.png" id="1_1ab71"]
[ext_resource type="Texture2D" uid="uid://bun6e0u5xbg4d" path="res://Assets/bedroom_wall_2_concept.jpg" id="2_1q6lu"]
[ext_resource type="Texture2D" uid="uid://hlsyewmvb6w0" path="res://Assets/bedroom_wall_3_concept.jpg" id="3_u6ieq"]
[ext_resource type="Texture2D" uid="uid://bspgcwbpp0b5f" path="res://Assets/bedroom_wall_4_concept.jpg" id="4_1gcab"]
[ext_resource type="Script" path="res://Scripts/gameplay_script.gd" id="5_123ap"]
[ext_resource type="Script" path="res://Scripts/g_timer.gd" id="6_t30gy"]
[ext_resource type="Script" path="res://Scripts/game_camera.gd" id="7_uaal4"]
[ext_resource type="Texture2D" uid="uid://c42a4uqvcdwh3" path="res://Assets/Buttons/Left button.png" id="8_etobs"]
[ext_resource type="Texture2D" uid="uid://cbihbvt57eerl" path="res://Assets/Buttons/Right button.png" id="9_x63ur"]
[ext_resource type="Texture2D" uid="uid://oto8pvuejqmi" path="res://Assets/Sprite Sheets/AlienHappy.PNG" id="10_lq4rg"]
[ext_resource type="Texture2D" uid="uid://c5aekbdxdhhav" path="res://Assets/Sprite Sheets/AlienDefault.PNG" id="11_fht24"]
[ext_resource type="Texture2D" uid="uid://bwqmksakinq0x" path="res://Assets/Sprite Sheets/AlienSad.PNG" id="12_p7erd"]
[ext_resource type="FontFile" uid="uid://cb4xssjf63m48" path="res://Assets/GrapeSoda.ttf" id="13_a3j3i"]
[ext_resource type="Script" path="res://Scripts/d_timer.gd" id="14_drtbu"]
[ext_resource type="Script" path="res://Scripts/dist_nodes.gd" id="15_nfype"]
[ext_resource type="PackedScene" uid="uid://df28vwujoxos2" path="res://Assets/distraction.tscn" id="16_26itk"]
[ext_resource type="SpriteFrames" uid="uid://cn4jxs8eqa86m" path="res://Assets/Sprite Sheets/Clock Animations.tres" id="17_sxlhc"]
[ext_resource type="SpriteFrames" uid="uid://byf1fxiachjxj" path="res://Assets/Sprite Sheets/Phone Animations.tres" id="18_neohe"]
[ext_resource type="Script" path="res://Scripts/chore_nodes.gd" id="19_8hvt6"]
[ext_resource type="Script" path="res://Scripts/chore_script.gd" id="20_r5ik3"]
[ext_resource type="Texture2D" uid="uid://dojcp1gqa02fr" path="res://Assets/Sprite Sheets/Trash.PNG" id="21_s2mc8"]
[ext_resource type="AudioStream" uid="uid://b5p64vydicwda" path="res://Assets/circle 5ths menu.wav" id="22_ao1m3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_81d5g"]
atlas = ExtResource("10_lq4rg")
region = Rect2(0, 0, 960, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_km1wi"]
atlas = ExtResource("10_lq4rg")
region = Rect2(960, 0, 960, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_40e1e"]
atlas = ExtResource("10_lq4rg")
region = Rect2(0, 540, 960, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_xw856"]
atlas = ExtResource("10_lq4rg")
region = Rect2(960, 540, 960, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_dy3ce"]
atlas = ExtResource("10_lq4rg")
region = Rect2(0, 1080, 960, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_6h8bb"]
atlas = ExtResource("11_fht24")
region = Rect2(0, 0, 960, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_f44ya"]
atlas = ExtResource("11_fht24")
region = Rect2(960, 0, 960, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_ori5y"]
atlas = ExtResource("11_fht24")
region = Rect2(0, 540, 960, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_2qhfl"]
atlas = ExtResource("11_fht24")
region = Rect2(960, 540, 960, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_wryx8"]
atlas = ExtResource("11_fht24")
region = Rect2(0, 1080, 960, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_q3ldm"]
atlas = ExtResource("12_p7erd")
region = Rect2(0, 0, 960, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_ucmxh"]
atlas = ExtResource("12_p7erd")
region = Rect2(960, 0, 960, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_a4qru"]
atlas = ExtResource("12_p7erd")
region = Rect2(0, 540, 960, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_3k582"]
atlas = ExtResource("12_p7erd")
region = Rect2(960, 540, 960, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7v23"]
atlas = ExtResource("12_p7erd")
region = Rect2(0, 1080, 960, 540)

[sub_resource type="SpriteFrames" id="SpriteFrames_363uf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_81d5g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_km1wi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_40e1e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xw856")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dy3ce")
}],
"loop": true,
"name": &"alienHappy",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6h8bb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f44ya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ori5y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2qhfl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wryx8")
}],
"loop": true,
"name": &"alienIdle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q3ldm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ucmxh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a4qru")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3k582")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7v23")
}],
"loop": true,
"name": &"alienSad",
"speed": 6.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_7usva"]
atlas = ExtResource("21_s2mc8")
region = Rect2(0, 0, 480, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_2fx0s"]
atlas = ExtResource("21_s2mc8")
region = Rect2(480, 0, 480, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_vk5yn"]
atlas = ExtResource("21_s2mc8")
region = Rect2(960, 0, 480, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_68kil"]
atlas = ExtResource("21_s2mc8")
region = Rect2(1440, 0, 480, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_acwyf"]
atlas = ExtResource("21_s2mc8")
region = Rect2(0, 540, 480, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_jxass"]
atlas = ExtResource("21_s2mc8")
region = Rect2(480, 540, 480, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_nnwc0"]
atlas = ExtResource("21_s2mc8")
region = Rect2(960, 540, 480, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_jdwcg"]
atlas = ExtResource("21_s2mc8")
region = Rect2(1440, 540, 480, 540)

[sub_resource type="SpriteFrames" id="SpriteFrames_c865o"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7usva")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2fx0s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vk5yn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_68kil")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_acwyf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jxass")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nnwc0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jdwcg")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Level 1" type="Node2D"]

[node name="Background 1" type="Sprite2D" parent="."]
position = Vector2(-5.78165e-06, -1.77622e-05)
scale = Vector2(0.6, 0.6)
texture = ExtResource("1_1ab71")

[node name="Background 2" type="Sprite2D" parent="."]
position = Vector2(1155, 0)
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_1q6lu")

[node name="Background 3" type="Sprite2D" parent="."]
position = Vector2(2310, 0)
scale = Vector2(0.6, 0.6)
texture = ExtResource("3_u6ieq")

[node name="Background 4" type="Sprite2D" parent="."]
position = Vector2(-1155, 0)
scale = Vector2(0.6, 0.6)
texture = ExtResource("4_1gcab")

[node name="Gameplay" type="Node" parent="."]
script = ExtResource("5_123ap")

[node name="gTimer" type="Timer" parent="Gameplay"]
script = ExtResource("6_t30gy")
metadata/maxTime = 120

[node name="Camera2D" type="Camera2D" parent="Gameplay"]
script = ExtResource("7_uaal4")

[node name="Left Button" type="Button" parent="Gameplay/Camera2D"]
offset_left = -574.0
offset_top = -67.0
offset_right = -418.0
offset_bottom = 70.0
focus_mode = 0
icon = ExtResource("8_etobs")
flat = true

[node name="Right Button" type="Button" parent="Gameplay/Camera2D"]
offset_left = 417.0
offset_top = -66.0
offset_right = 573.0
offset_bottom = 71.0
focus_mode = 0
icon = ExtResource("9_x63ur")
flat = true

[node name="Alien Sprite" type="AnimatedSprite2D" parent="Gameplay/Camera2D"]
position = Vector2(-519, -268)
scale = Vector2(-0.189, 0.202)
sprite_frames = SubResource("SpriteFrames_363uf")
animation = &"alienIdle"
frame_progress = 0.372712

[node name="Alien Box" type="Polygon2D" parent="Gameplay/Camera2D/Alien Sprite"]
show_behind_parent = true
color = Color(0.255659, 0.255659, 0.255659, 1)
polygon = PackedVector2Array(259.259, -198.02, -153.439, -252.475, -285.714, 257.426, 243.386, 262.376)

[node name="Score" type="Label" parent="Gameplay/Camera2D"]
offset_left = -469.0
offset_top = -311.0
offset_right = -391.0
offset_bottom = -280.0
theme_override_fonts/font = ExtResource("13_a3j3i")
theme_override_font_sizes/font_size = 30
text = "Score: 0"

[node name="Score Box" type="Polygon2D" parent="Gameplay/Camera2D/Score"]
show_behind_parent = true
position = Vector2(143, 65)
color = Color(0.255659, 0.255659, 0.255659, 1)
polygon = PackedVector2Array(-156, -72, -146, -29, 61, -27, 88, -72)

[node name="Time" type="Label" parent="Gameplay/Camera2D"]
offset_left = -456.0
offset_top = -258.0
offset_right = -378.0
offset_bottom = -227.0
theme_override_fonts/font = ExtResource("13_a3j3i")
theme_override_font_sizes/font_size = 30
text = "Time:"

[node name="Time Box" type="Polygon2D" parent="Gameplay/Camera2D/Time"]
show_behind_parent = true
position = Vector2(456, 258)
color = Color(0.255659, 0.255659, 0.255659, 1)
polygon = PackedVector2Array(-471, -268, -458, -218, -301, -216, -269, -266)

[node name="dTimer" type="Timer" parent="Gameplay"]
wait_time = 30.0
script = ExtResource("14_drtbu")
metadata/startTime = 30

[node name="Distraction Nodes" type="Node" parent="Gameplay"]
script = ExtResource("15_nfype")

[node name="Distraction" parent="Gameplay/Distraction Nodes" instance=ExtResource("16_26itk")]
offset_left = 2.0
offset_top = 18.0
offset_right = 36.0
offset_bottom = 29.0
scale = Vector2(1.76, 5.2)
flat = true
metadata/animName = "clock"

[node name="Distraction Sprite" parent="Gameplay/Distraction Nodes/Distraction" index="0"]
position = Vector2(17.045, 3.269)
scale = Vector2(0.1, 0.042)
sprite_frames = ExtResource("17_sxlhc")
animation = &"clockIdle"

[node name="Distraction2" parent="Gameplay/Distraction Nodes" instance=ExtResource("16_26itk")]
offset_left = -249.583
offset_top = -165.419
offset_right = -241.583
offset_bottom = -157.419
metadata/animName = "phone"

[node name="Distraction Sprite" parent="Gameplay/Distraction Nodes/Distraction2" index="0"]
visible = false
sprite_frames = ExtResource("18_neohe")
animation = &"phoneIdle"

[node name="Chore Nodes" type="Node" parent="Gameplay"]
script = ExtResource("19_8hvt6")
metadata/maxChores = 5
metadata/maxTime = 0
metadata/minTime = 0

[node name="cTimer" type="Timer" parent="Gameplay/Chore Nodes"]
one_shot = true

[node name="Chore" type="Button" parent="Gameplay/Chore Nodes"]
offset_left = -828.0
offset_top = 224.0
offset_right = -820.0
offset_bottom = 232.0
scale = Vector2(8.99412, 10.2006)
focus_mode = 0
flat = true
script = ExtResource("20_r5ik3")

[node name="Chore Sprite" type="AnimatedSprite2D" parent="Gameplay/Chore Nodes/Chore"]
position = Vector2(4.00261, 4.01937)
scale = Vector2(0.0166776, 0.014705)
sprite_frames = SubResource("SpriteFrames_c865o")

[node name="Chore Sound" type="AudioStreamPlayer2D" parent="Gameplay/Chore Nodes/Chore"]

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource("22_ao1m3")
autoplay = true

[connection signal="newTime" from="Gameplay/gTimer" to="Gameplay" method="_on_g_timer_new_time"]
[connection signal="pressed" from="Gameplay/Camera2D/Left Button" to="Gameplay/Camera2D" method="_on_left_button_pressed"]
[connection signal="pressed" from="Gameplay/Camera2D/Right Button" to="Gameplay/Camera2D" method="_on_right_button_pressed"]
[connection signal="timeout" from="Gameplay/dTimer" to="Gameplay" method="_on_d_timer_timeout"]
[connection signal="newDist" from="Gameplay/Distraction Nodes" to="Gameplay" method="_on_d_timer_timeout"]
[connection signal="choreComplete" from="Gameplay/Chore Nodes" to="Gameplay" method="_on_chore_nodes_chore_complete"]
[connection signal="timeout" from="Gameplay/Chore Nodes/cTimer" to="Gameplay/Chore Nodes" method="_on_c_timer_timeout"]
[connection signal="choreClicked" from="Gameplay/Chore Nodes/Chore" to="Gameplay/Chore Nodes" method="_on_chore_chore_clicked"]

[editable path="Gameplay/Distraction Nodes/Distraction"]
[editable path="Gameplay/Distraction Nodes/Distraction2"]
